combobox: don't animate state changes in TransparentButton

TransparentButton has state-change animations enabled despite being invisible,
which causes a bunch of spurious repaints of the combobox on mouse enter/exit.

BUG=645266

Review-Url: https://codereview.chromium.org/2327673003
Cr-Commit-Position: refs/heads/master@{#418824}

Former-commit-id: 9469d57224252e71f21394f17a30929ec3fd102e